# arelith-combat-simulator

./: Cargo.toml  README.md  fetch_arelith_weapons.py
src/: character.rs  combat.rs  dice.rs  lib.rs  main.rs  rules.rs  simulator.rs  size.rs  string.rs
src/feat/: feat.rs  feat_db.rs
src/item/: damage.rs  item.rs  mod.rs  weapon.rs  weapon_db.rs
src/simulator/: character.rs  combat.rs  dice.rs  mod.rs  simulator.rs  size.rs  string.rs
src/simulator/feat/: feat.rs  feat_db.rs  mod.rs
src/simulator/item/: damage.rs  item.rs  mod.rs  weapon.rs  weapon_db.rs
