# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "arelith_combat_simulator"
version = "1.0.0"
edition = "2021"

[lib]
name = "arelith"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
rand = "0.8.5"
