# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "arelith_combat_simulator"
description = "Combat simulator for the Neverwinter Nights game based on Arelith changes."
version = "1.4.4"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/egebilecen/arelith-combat-simulator/"
keywords = ["arelith", "neverwinter-nights", "simulator"]
exclude = ["fetch_arelith_weapons.py"]

[lib]
name = "arelith"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.193", features = ["derive"]}
